--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <ul>
             <li><a href="#cakes">Cakes </a></li>
             <li><a href="#cookies">Cookies</a></li>
-            <li><a href="#brownies">Cookies</a></li>
+            <li><a href="#brownies">Brownies</a></li>
 
         </ul>
     </nav>
